--- a/SRC/telas/index.html
+++ b/SRC/telas/index.html
@@ -83,12 +83,12 @@
             
         }
 
-        dialog {
-            margin: auto;
-            background-color: white;
-            width: 100vw;
+        /* dialog { */
+            /* margin: auto; */
+            /* background-color: white; */
+            /* width: 100vw; */
             /* height: 800px; */
-        }
+        /* } */
 
         /* dialog .cabeçalho {
             display: flex;
