Cabeçalho sticky e diminuindo/retornando escala ao scrollar

--- a/SRC/telas/index.html
+++ b/SRC/telas/index.html
@@ -205,12 +205,12 @@
     </main>
 
 
-    <dialog>
+    <!-- <dialog>
         <div>
             <h1 id="textoDialog"></h1>
             <button onclick="fecharDialogAdd()">x</button>
         </div>
-    </dialog>
+    </dialog> -->
     <script src="../clients/times.js"></script>
 
     <script>
@@ -245,7 +245,7 @@
             carregarListaTimes()
             // window.refresh
         }
-        
+       
     </script>
 </body>
 </html>
