--- a/SRC/telas/teste.html
+++ b/SRC/telas/teste.html
@@ -1,80 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        * {
-            margin: 0px;
-            padding: 0px;
-            box-sizing: border-box;
-        }
-
-        #dialog {
-            background-color: lightgray;
-            height: 100vh;
-        }
-
-        #header {
-            background-color: green;
-            display: flex;
-            height: 200px;
-        }
-
-        #logo {
-            width: 20%;
-            background-color: white;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            border: 1px solid black;
-            padding: 5px;
-        }
-
-        #logo img {
-            width: 70%;
-        }
-
-        #info {
-            background-color: blue;
-            display: flex;
-            flex-direction: column;
-            width: 80%;
-        }
-
-        #nome {
-            background-color: red;
-            color:white;
-            padding: 20px;
-        }
-
-        #tabs {
-            background-color: brown;
-            width: 100%;
-            height: 69%;
-        }
-    </style>
-</head>
-<body>
-    <div id="dialog">
-        <div id="header">
-            <div id="logo">
-                <img src="../img/escudos/Alemanha/big/Bayern.png" alt="">
-            </div>
-            <div id="info">
-                <div id="nome"><h1>FC Bayern Munchen AG</h1></div>
-                <div id="stats">Fundação: 1900</div>
-                <div id="stats">Website: www.fcbayern.com</div>
-            </div>
-        </div>
-        <div id="tabs">
-            <div>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam eos, harum modi alias accusamus odio, voluptatibus iusto eius sequi porro excepturi reiciendis animi, voluptates dicta! Non sapiente voluptatum numquam ex?
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam eos, harum modi alias accusamus odio, voluptatibus iusto eius sequi porro excepturi reiciendis animi, voluptates dicta! Non sapiente voluptatum numquam ex?
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam eos, harum modi alias accusamus odio, voluptatibus iusto eius sequi porro excepturi reiciendis animi, voluptates dicta! Non sapiente voluptatum numquam ex?
-            </div>
-        </div>
-    </div>
-</body>
+<html>
+  <body>
+    <form ref='uploadForm' 
+      id='uploadForm' 
+      action='http://localhost:3000/upload' 
+      method='post' 
+      encType="multipart/form-data">
+        <input type="file" name="sampleFile" />
+        <input type='submit' value='Upload!' />
+    </form>     
+  </body>
 </html>
