--- a/SRC/telas/index.html
+++ b/SRC/telas/index.html
@@ -102,7 +102,8 @@
     </style>
 </head>
 <body>
-    <header class="flex justify-between items-center fixed w-full bg-[goldenrod] py-2.5 px-3.5 z-10 border-b-2 border-[#a77d15] text-[#06203F]">
+    <!-- <header class="flex justify-between items-center fixed w-full bg-[goldenrod] py-2.5 px-3.5 z-10 border-b-2 border-[#a77d15] text-[#06203F]"> -->
+        <header class="flex justify-between items-center fixed w-full bg-[#edb141] py-2.5 px-3.5 z-10 border-b-2 border-[#a77d15] text-[#06203F] shadow-lg">
         <div class="flex items-center gap-2.5">
             <a href="../img/logo4.png" target="_blank"><img src="../img/logo4.png" alt="Logo do Site" width="60px"></a>
             <h1 class="font-bold text-3xl">API Futebol Clube</h1>
