--- a/SRC/telas/index.html
+++ b/SRC/telas/index.html
@@ -122,7 +122,7 @@
         </div>
     </header>
     <main id="main" class="pt-[85px]">
-        <button class="mt-2" onclick="criarDialogCadastro()">Cadastrar</button>
+        <a href="./gerenciamento.html" class="mt-2">Gerenciar</button>
         <!-- <section id="listaDeTimes"></section> -->
     </main>
 
