Mudando linguagem pagina

--- a/SRC/telas/gerenciamento.html
+++ b/SRC/telas/gerenciamento.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -51,7 +51,7 @@
 
             times.forEach(time => {
                 let div = document.createElement('div')
-                div.className = 'grid grid-cols-6 py-1 px-5 bg-gray-100 border-2 border-gray-200 items-center'         
+                div.className = 'grid grid-cols-6 py-1 px-5 bg-gray-100 border-2 border-gray-200 items-center'
                 
                 // let id = document.createElement('h2')
                 // id.innerHTML = time.id
