Ajustes para entrega pro professor

--- a/SRC/telas/cadastro.html
+++ b/SRC/telas/cadastro.html
@@ -112,6 +112,6 @@
         }
     </script>
 
-<script src="../clients/times.js"></script>
+<script src="../clients/timesIndex.js"></script>
 </body>
 </html>
