--- a/SRC/telas/gerenciamento.html
+++ b/SRC/telas/gerenciamento.html
@@ -15,7 +15,7 @@
     </style>
 </head>
 <body>
-    <header class="flex justify-between items-center fixed w-full bg-[#edb141] py-2.5 px-3.5 z-10 border-b-2 border-[#a77d15] text-[#06203F] shadow-lg">
+    <header class="flex justify-between items-center fixed w-full bg-[#edb141] py-2.5 px-3.5 z-10 border-b-2 border-[#a77d15] text-[#06203F] shadow-md">
         <div class="flex items-center gap-2.5">
             <a href="./index.html"><img src="../img/logo4.png" alt="Logo do Site" width="60px"></a>
             <h1 class="font-bold text-3xl">API Futebol Clube - Gerenciamento dos Times</h1>
@@ -33,7 +33,6 @@
             fetch('http://localhost:3000/api/times/Todos')
             .then(response => response.json())
             .then(data => {
-                console.log(data)
                 criarTabela(data);
             })
         }
@@ -51,15 +50,24 @@
 
             times.forEach(time => {
                 let div = document.createElement('div')
-                div.className = 'grid grid-cols-6 py-1 px-5 bg-gray-100 border-2 border-gray-200 items-center'
+                // div.className = `group grid grid-cols-6 py-1 px-5 bg-gray-100 border-2 border-gray-200 items-center hover:bg-gray-200 hover:border-gray-300 hover:bg-gradient-to-r from-[${time.cores[0]}] to-[${time.cores[1]}]`
+                div.className = `group grid grid-cols-6 py-1 px-5 bg-gray-100 border-2 border-gray-200 items-center hover:border-gray-300 hover:bg-gradient-to-r from-gray-200 from-10% to-gray-100`
                 
                 // let id = document.createElement('h2')
                 // id.innerHTML = time.id
                 // div.appendChild(id)
 
                 let escudo = document.createElement('img')
-                escudo.className = 'h-3/4 pl-12'
+                // escudo.className = 'h-3/4 pl-12'
+                // escudo.className = 'h-24 pl-12 my-3 py-0'
+                // escudo.className = 'h-24 pl-12 my-1 py-1'
+                escudo.className = 'h-24 pl-12 my-4 py-0 hover:cursor-pointer group-hover:opacity-75'
                 escudo.src = time.escudo
+
+                escudo.addEventListener('click', function() {
+                    carregarDetalhesTime(time.id, time.pais)
+                })
+
                 div.appendChild(escudo)
 
                 let nome = document.createElement('h2')
@@ -82,7 +90,7 @@
                 liga.className = 'flex gap-2 items-center'
                 let logo = document.createElement('img')
                 logo.className = 'h-10'
-                logo.src = `../img/competicoes/${time.pais}/${time.liga.replaceAll(" ", "")}.png`
+                logo.src = `../img/competicoes/${time.pais}/${time.liga}.png`
                 liga.appendChild(logo)
                 let nomeLiga = document.createElement('h2')
                 nomeLiga.innerText = time.liga
@@ -93,12 +101,12 @@
                 acoes.className = 'grid grid-cols-2 col-span-2 gap-4 items-center w-1/2 justify-self-end'
                 // acoes.className = 'grid grid-cols-2 col-span-2 gap-4 items-center w-1/2 justify-self-end mr-5'
                 let botaoEditar = document.createElement('button')
-                botaoEditar.className = 'py-1.5 px-4 border  border-gray-300 bg-gray-200 hover:border-gray-400'
-                // botaoEditar.className = 'py-1.5 px-4 border border-gray-400 bg-gray-300'
+                botaoEditar.className = 'py-1.5 px-4 border  border-gray-300 bg-gray-200 hover:bg-gray-100 hover:border-gray-400'
                 botaoEditar.innerText = 'Editar'
+                botaoEditar.addEventListener('click', () => carregarDadosDoTime(time.pais, time.id))
                 acoes.appendChild(botaoEditar)
                 let botaoDeletar = document.createElement('button')
-                botaoDeletar.className = 'py-1.5 px-4 border border-gray-300 bg-gray-200 hover:border-gray-400'
+                botaoDeletar.className = 'py-1.5 px-4 border border-gray-300 bg-gray-200 hover:bg-gray-100 hover:border-gray-400'
                 botaoDeletar.innerText = 'Deletar'
                 botaoDeletar.addEventListener('click', () => deletarTime(time.pais, time.id))
                 acoes.appendChild(botaoDeletar)
@@ -118,6 +126,8 @@
         }
     </script>
 
-    <script src="../clients/times.js"></script>
+    <script src="../clients/timesCreate.js"></script>
+    <script src="../clients/timesEdit.js"></script>
+    <script src="../clients/timesShow.js"></script>
 </body>
 </html>
