Mudança no estilo do Header

--- a/SRC/telas/index.html
+++ b/SRC/telas/index.html
@@ -19,7 +19,8 @@
     </style>
 </head>
 <body class="bg-gray-50">
-    <header class="flex justify-between items-center fixed w-full bg-[#edb141] py-2.5 px-3.5 z-10 border-b-2 border-[#a77d15] text-[#06203F] shadow-md">
+    <!-- <header class="flex justify-between items-center fixed w-full bg-[#edb141] py-2.5 px-3.5 z-10 border-b-2 border-[#a77d15] text-[#06203F] shadow-md"> -->
+        <header class="flex justify-between items-center fixed w-full bg-[#edb141] py-2.5 px-3.5 z-10 border-b-2 border-[#edb141] text-[#06203F] shadow-md">
     <!-- <header class="flex justify-between items-center fixed w-full bg-[#edb141] py-2.5 px-3.5 z-10 text-[#06203F] shadow-md"> -->
         <div class="flex items-center gap-2.5">
             <a href="../img/logo4.png" target="_blank"><img src="../img/logo4.png" alt="Logo do Site" width="60px"></a>
