--- a/SRC/telas/gerenciamento.html
+++ b/SRC/telas/gerenciamento.html
@@ -15,7 +15,8 @@
     </style>
 </head>
 <body>
-    <header class="flex justify-between items-center fixed w-full bg-[#edb141] py-2.5 px-3.5 z-10 border-b-2 border-[#a77d15] text-[#06203F] shadow-md">
+    <!-- <header class="flex justify-between items-center fixed w-full bg-[#edb141] py-2.5 px-3.5 z-10 border-b-2 border-[#a77d15] text-[#06203F] shadow-md"> -->
+        <header class="flex justify-between items-center fixed w-full bg-[#edb141] py-2.5 px-3.5 z-10 border-b-2 border-[#edb141] text-[#06203F] shadow-md">
         <!-- <header class="flex justify-between items-center fixed w-full bg-[#edb141] py-2.5 px-3.5 z-10 text-[#06203F] shadow-md"> -->
         <div class="flex items-center gap-2.5">
             <a href="./index.html"><img src="../img/logo4.png" alt="Logo do Site" width="60px"></a>
@@ -41,7 +42,7 @@
     </header>
 
     <main id="main" class="pt-[85px]">
-        <button class="mt-4 ml-8 py-2.5 px-10 border border-gray-200 bg-gray-100 font-semibold hover:bg-gray-50 hover:border-gray-300" onclick="criarDialogCadastro()">Cadastrar</button>
+        <button class="mt-5 ml-8 py-2.5 px-10 border border-gray-200 bg-gray-100 font-semibold hover:bg-gray-50 hover:border-gray-300" onclick="criarDialogCadastro()">Cadastrar</button>
     </main>
 
     <script>
